<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/datetext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/textColor"
            android:textSize="@dimen/mediumTextStyle" />

        <TextView
            android:id="@+id/nametext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/uploadername"
            android:textColor="@color/textColor"
            android:textSize="@dimen/mediumTextStyle" />

        <TextView
            android:id="@+id/roadmaptext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:textColor="@color/textColor"
            android:text="@string/docroadmap"
            android:textSize="@dimen/mediumTextStyle" />

        <TextView
            android:id="@+id/docnametext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:textColor="@color/textColor"
            android:text="@string/docname"
            android:textSize="@dimen/mediumTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/doc_download" />


    </LinearLayout>


</LinearLayout>