<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.inqbarna.tablefixheaders.TableFixHeaders
                android:id="@+id/workordertable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:text="Entrepreneur's Comment:"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/entreprenuerscomment"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/edittext_bg_selector"
                        android:textColor="@color/black"
                        android:layout_weight="7"
                        android:padding="5dp"
                        android:focusable="true"
                        android:inputType="textMultiLine"

                        />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:isIndicator="false"
                        android:layout_alignParentRight="true"
                        android:progressTint="@color/orange"
                        android:numStars="10"
                        android:padding="1dp"
                        android:progress="3"
                        android:stepSize="0.5" />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black"
                        android:text="Contractor's Reply:"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/contractorscomment"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="7"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:background="@drawable/edittext_bg_selector"
                        android:focusable="true"
                        android:inputType="textMultiLine"

                        />

                </LinearLayout>

                <Button
                    android:id="@+id/saveComment"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/green_color_button"
                    android:text="@string/submit" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:weightSum="1">

                <Button
                    android:id="@+id/updateworkorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/green_color_button"
                    android:text="@string/updateWorkorder" />

                <Button
                    android:id="@+id/downloadworkorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/blue_button"
                    android:text="@string/downloadWorkorder" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>